gcc-14.2.0/gcc/testsuite/gdc.test/compilable/test20367.d
version https://git-lfs.github.com/spec/v1
oid sha256:5797853f45a5cccc26811e7b58bf6ad1d059eaa645da8b0d2bbce78cbd8f2805
size 194
