gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/b3841.d
version https://git-lfs.github.com/spec/v1
oid sha256:5633f24985a827dd31542424dfc8e043ea9e9f4125d0d6eb457aba344f9042df
size 2541
